--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <meta property="og:title" content="Ruben Vanstiphout - Geen Straf = Geen Gerechtigheid">
     <meta property="og:description" content="Ruben Vanstiphout werd schuldig bevonden aan verkrachting maar kreeg geen straf. Wij eisen gerechtigheid en verandering in het rechtssysteem.">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="favicon.png">
     <title>Ruben Vanstiphout - Geen Straf = Geen Gerechtigheid</title>
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="alternate icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
+    <meta name="theme-color" content="#8B0000">
     <link rel="stylesheet" href="styles.css">
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7BFHN0CGX8"></script>
