--- a/petitie.html
+++ b/petitie.html
@@ -55,11 +55,11 @@
                     </div>
                     <div class="demand-item">
                         <h3>3. Verantwoordelijkheid van instellingen 🏥</h3>
-                        <p>Universiteiten en ziekenhuizen mogen geen wegkijken. Studenten in opleiding tot arts dragen een bijzonder moreel gewicht. Het minste wat een opleiding moet doen, is het vertrouwen van slachtoffers herstellen.</p>
+                        <p>Universiteiten en ziekenhuizen mogen niet wegkijken. Studenten in opleiding tot arts dragen een bijzonder moreel gewicht en hebben juist een voorbeeldfunctie. Omdat hij arts in opleiding is moet de straf juist hoger zijn!</p>
                     </div>
                     <div class="demand-item">
                         <h3>4. Luister naar slachtoffers 📢</h3>
-                        <p>De stem van het slachtoffer mag niet overschaduwd worden door het CV van de dader. Elk slachtoffer heeft recht op een proces dat haar of hem serieus neemt, in daden én in woorden.</p>
+                        <p>De stem van het slachtoffer mag niet overschaduwd worden door het CV van de dader. Elk slachtoffer heeft recht op een proces dat haar of hem serieus neemt, in woorden én in daden.</p>
                     </div>
                 </div>
 
@@ -67,8 +67,7 @@
                 <ul class="manifesto-for">
                     <li>Slachtoffers van seksueel geweld die zich genegeerd voelen door het systeem.</li>
                     <li>Mensen die geloven dat rechtvaardigheid geen luxe is, maar een fundamenteel recht.</li>
-                    <li>Iedereen die inziet dat "geen straf" een gevaarlijk precedent schept.</li>
-                    <li>Iedereen die weigert te zwijgen.</li>
+                    <li>Iedereen die inziet dat "geen straf" een gevaarlijk precedent schept, want daders komen er blijkbaar mee weg.</li>
                 </ul>
 
                 <div class="sign-section">
