--- a/meldpunt.html
+++ b/meldpunt.html
@@ -3,7 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hulp en ondersteuning voor slachtoffers van seksueel geweld. Je staat er niet alleen voor.">
+    <meta name="keywords" content="meldpunt, hulp, seksueel geweld, ondersteuning, aangifte, medische zorg, vertrouwelijk gesprek">
+    <meta name="author" content="Gerechtigheid Eisen">
+    <meta property="og:title" content="Meldpunt & Ondersteuning">
+    <meta property="og:description" content="Hulp en ondersteuning voor slachtoffers van seksueel geweld. Je staat er niet alleen voor.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="favicon.png">
     <title>Meldpunt & Ondersteuning</title>
+    <!-- Favicons -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
+    <meta name="theme-color" content="#8B0000">
     <link rel="stylesheet" href="styles.css">
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-7BFHN0CGX8"></script>
