--- a/meldpunt.html
+++ b/meldpunt.html
@@ -135,5 +135,8 @@
 
     </main>
     <script src="script.js"></script>
+    <footer class="footer">
+        <p>Contact: <a href="mailto:petitietegenverkrachting@gmail.com">petitietegenverkrachting@gmail.com</a></p>
+    </footer>
 </body>
 </html>
