--- a/petitie.html
+++ b/petitie.html
@@ -94,5 +94,8 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <footer class="footer">
+        <p>Contact: <a href="mailto:petitietegenverkrachting@gmail.com">petitietegenverkrachting@gmail.com</a></p>
+    </footer>
 </body>
 </html> 
