--- a/bronnen.html
+++ b/bronnen.html
@@ -127,5 +127,8 @@
         </section>
     </main>
     <script src="script.js"></script>
+    <footer class="footer">
+        <p>Contact: <a href="mailto:petitietegenverkrachting@gmail.com">petitietegenverkrachting@gmail.com</a></p>
+    </footer>
 </body>
 </html>
