--- a/petitie.html
+++ b/petitie.html
@@ -49,9 +49,12 @@
                         <h3>1. Gelijke toepassing van de wet 🧑‍⚖️ </h3>
                         <p>Geen enkel talent, diploma of sociaal profiel mag iemand vrijwaren van verantwoordelijkheid voor seksueel geweld. Rechtspraak is geen loopbaanadvies.</p>
                     </div>
-                    <div class="demand-item">
+                    <div class="demand-item fulfilled">
                         <h3>2. Transparantie in vonnissen 🏛️ </h3>
                         <p>De bewoording "getalenteerd en geëngageerd" als verzachtende omstandigheid voor verkrachting is onaanvaardbaar. Wij eisen transparantie en reflectie van de rechtspraak.</p>
+                        <div class="fulfillment-note">
+                            <p>✅ <strong>Vereiste vervuld:</strong> De rechtbank heeft het volledige vonnis van deze zaak openbaar gemaakt. <a href="correctioneel-vonnis-leuven-1-april-2025.pdf" target="_blank" rel="noopener noreferrer">Bekijk het vonnis hier</a>.</p>
+                        </div>
                     </div>
                     <div class="demand-item">
                         <h3>3. Verantwoordelijkheid van instellingen 🏥</h3>
